Fix Homepage dev-friendly block z-indexes

--- a/src/public/less/components/landing-bottom.less
+++ b/src/public/less/components/landing-bottom.less
@@ -505,6 +505,7 @@
 		}
 
 		&_image {
+			z-index: 1;
 			position: absolute;
 			width: 324px;
 			height: 240px;
@@ -525,6 +526,7 @@
 			display: none;
 
 			@media (min-width: @screen-sm-min) {
+				z-index: 1;
 				display: block;
 				top: 0;
 				right: 0;
@@ -538,6 +540,7 @@
 		.wrapper-lg {
 			display: flex;
 			justify-content: center;
+			z-index: 2;
 		}
 
 		h4 {
